--- a/src/p2-homeworks/h5/HW5.module.css
+++ b/src/p2-homeworks/h5/HW5.module.css
@@ -6,3 +6,40 @@
     padding: 15px;
     box-shadow: 0px 3px 5px #535354;;
 }
+.header {
+    cursor: pointer;
+    font-size: 40px;
+    color: #ffffff;
+    transition: all 0.5s;
+}
+.header:hover {
+    color: #484f4f ;
+}
+.containerMenu {
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s;
+    padding: 0;
+    margin: 0;
+}
+.active {
+    color: #484f4f;
+    font-weight: bold;
+}
+.activeMenu {
+    visibility: visible;
+    opacity: 1;
+    padding: 0 55px;
+    justify-content: space-between;
+    transition: all 0.5s ease-in-out;
+}
+.menuLinks {
+    margin-right: 10px;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+.menuLinks:hover {
+    color: #484f4f;
+    text-decoration: none;
+}
