--- a/src/p2-homeworks/h8/HW8.module.css
+++ b/src/p2-homeworks/h8/HW8.module.css
@@ -1,7 +1,19 @@
-
-
-
-
+.title {
+    font-size: medium;
+    font-family: 'Roboto', sans-serif;
+    font-weight: revert;
+    color: #6a89cc;
+}
+.container {
+    text-align: center;
+}
 .buttons {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 10px auto;
+    text-decoration: none;
+    font-size:1.25rem;
 }
