--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -2,7 +2,7 @@
 
 }
 .title {
-    text-align: center;
+    width: 200px;
     background-color: #a2d9ce;
-    color: #343434;
+    color: #343434
 }
