--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -22,8 +22,8 @@ background: lightslategray;
 }
 
 .text {
-    width: 300px;
-    height: auto;
+    width: 250px;
+    height: 20px;
     padding: 5px;
     display: flex;
     align-items:center;
@@ -32,8 +32,8 @@ background: lightslategray;
 }
 
 .name {
-    font-weight: bold;
-    font-family: "JetBrains Mono";
+    font-family: "Courier New";
+    text-transform: uppercase;
     font-size: 1.5rem;
     color: rgb(221,210,210);
 }
