--- a/src/p2-homeworks/h12/HW12.module.css
+++ b/src/p2-homeworks/h12/HW12.module.css
@@ -1,3 +1,10 @@
+.wrapper {
+    height: 150px;
+    width: 500px;
+    text-align: center;
+    padding: 20px;
+}
+
 .dark {
     background: dimgrey;
 }
